--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,8 @@
-<h3>All <%= @category.name %></h3>
+<h3>All <%= @category.name %> that are available.</h3>
 
 <% @category.products.each do |product| %>
   <%= render partial: 'products/product', object: product %>
 <% end %>
 
-<%= link_to 'Back', root_path%>
+<%= link_to 'Back', categories_path%>
 
