--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <li><%= link_to "Categories", categories_path %></li>
       </ul>
   </nav>
-  <h1>welcome to keebs4weebs.ca</h1>
+  <h1>welcome to <%= link_to "keebs4weebs.ca", root_path %></h1>
     <%= yield %>
   </body>
 </html>
