Imlemented auto-resizing of images when uploaded using carrierwave by using mini magick gem. Re-uploaded all images of current products available to reflect this change.

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if product.image.present? %>
-    <p><%= image_tag(product.image.url, alt:'product.png',width: 200) %></p>
+    <p><%= image_tag(product.image.thumbnail.url, alt:'product.png') %></p>
   <% end %>
   <h3><%= link_to product.name, product%></h3>
   <p>Price: <%= number_to_currency product.price%> </p>
