--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if @product.image.present? %>
-    <p><%= image_tag(@product.image.url, alt:'product.png',width: 200) %></p>
+    <p><%= image_tag(@product.image.medium.url, alt:'product.png') %></p>
   <% end %>
   <h3><%= @product.name %></h3>
   <p>Category: <%= link_to @product.category.name, @product.category %></p>
