--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,10 +14,14 @@
   </div>
 
   <div class="field">
+    <%= f.label :Province %><br />
+    <%= f.select :province_id, options_from_collection_for_select(Province.all, :id, :name) %>
+  </div>
+
+  <div class="field">
     <%= f.label :phone %><br />
     <%= f.number_field :phone %>
   </div>
-
 
   <div class="field">
     <%= f.label :email %><br />
