--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
       <ul class="nav">
         <li class="nav-item"><%= link_to "Home", root_path %></li>
         <li><%= link_to "Categories", categories_path %></li>
+        <li><%= link_to "About Us", '/about_us' %></li>
+        <li><%= link_to "Contact Us", '/contact_us' %></li>
   <% if customer_signed_in? %>
     <li><%= link_to 'Edit profile', edit_customer_registration_path, :class => 'navbar-link' %></li>
     <li><%= link_to "Logout", destroy_customer_session_path, method: :delete, :class => 'navbar-link'  %></li>
