--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.row {
+  position: relative;
+  margin: 5px;
+  width: 200px;
+  height: 400px;
+  // float: left;
+}
+
+.card-image{
+  display: block;
+    width: 90%;
+    height: 200px;;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 15px;
+}
+
+.card-action {
+  width: 200px;
+  height: 90px;
+}
