--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,8 @@
-<h3>Types of Products we sell</h3>
+<h3>Categories for Products we sell</h3>
 
 <ul>
   <% @categories.each do |category| %>
     <li><%= link_to category.name, category %> has <%= pluralize(category.products.size, 'item') %> for sale.</li>
-    
+
   <% end %>
 </ul>
