Modified more css on the main page and the cart page. More importantly, implemented a cart feature using sessions. Still WIP being able to edit quantity.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,5 +4,6 @@
   <%= render partial: 'products/product', object: product %>
 <% end %>
 
-<%= link_to 'Back', categories_path%>
+<%= link_to 'Back', request.referer%>
+
 
