--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,38 @@
     <div class="nav-wrapper deep-purple lighten-1">
     <%= link_to "weebs", root_path, class: "brand-logo"%>
       <ul class="right hide-on-med-and-down">
-        <li><%= link_to "Home", root_path, class:"waves-effect waves-light btn" %></li>
-        <li><%= link_to "Categories", categories_path %></li>
+        <li>
+          <%= link_to root_path, class:"waves-effect waves-light btn" do %>
+            Home<i class="material-icons left">home</i>
+          <% end %>
+        </li>
+        <!-- <li><%= link_to "Categories", categories_path %></li> -->
+        <li>
+          <%= link_to  "#",{:class => "dropdown-trigger", 'data-target' => "categories"} do %>
+            Categories<i class="material-icons right">arrow_drop_down</i>
+          <% end %>
+        </li>
+        <%= content_tag(:ul, nil, id: 'categories', class: 'dropdown-content') do %>
+          <% Category.all.each do |category| %>
+            <li><%= link_to category.name, category %></li>
+            <li class="divider" tabindex="-1"></li>
+          <% end %>
+        <% end %>
         <li><%= link_to "About Us", '/about_us' %></li>
         <li><%= link_to "Contact Us", '/contact_us' %></li>
   <% if customer_signed_in? %>
     <li><%= link_to 'Edit profile', edit_customer_registration_path, :class => 'navbar-link' %></li>
     <li><%= link_to "Logout", destroy_customer_session_path, method: :delete, :class => 'navbar-link'  %></li>
-    Logged in as <strong><%= current_customer.name %></strong>(<%= current_customer.email %>).
+    Logged in as <strong><%= current_customer.name %></strong>
   <% else %>
     <li><%= link_to "Sign up", new_customer_registration_path, :class => 'navbar-link'  %></li>
     <li><%= link_to "Login", new_customer_session_path, :class => 'navbar-link'  %></li>
   <% end %>
+  <li>
+      <%= link_to '/cart', class:"waves-effect waves-light btn orange accent-4" do %>
+        <i class="material-icons left">shopping_cart</i>Cart
+      <% end %>
+    </li>
       </ul>
     </div>
   </nav>
@@ -34,8 +54,12 @@
   <%= form_tag(search_results_path, method: "get") do %>
       <%= label_tag(:q, "Search for:") %>
       <%= text_field_tag(:q) %>
+      <div class="input-field">
       <%= select_tag(:category_id, options_from_collection_for_select(Category.all, :id, :name),{include_blank: 'All Products'})%>
-      <%= button_tag("Search", class: 'btn waves-effect waves-light') %>
+      </div>
+      <%= button_tag("Search", class: "btn waves-effect waves-light") do %>
+        Submit<i class="material-icons right">send</i>
+      <% end %>
     <% end %>
   <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
