Created a save_order page to temporarily display payment going successfully. Can display order details in this page. WIP need to actually integrate payment functionality.

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -25,6 +25,6 @@
   </tbody>
 </table>
 <p>Total: <%= number_to_currency session[:subtotal] %></p>
-<%= link_to '/checkout', class:"waves-effect waves-light btn-small light-green darken-4" do %>
+<%= link_to '/save_order', class:"waves-effect waves-light btn-small light-green darken-4" do %>
   <i class="material-icons left">payment</i>Give Money
 <% end %>
