--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -25,8 +25,8 @@
   </tbody>
 </table>
 <p>Subtotal: <%= number_to_currency session[:subtotal] %></p>
-<p>HST/PST: <%= number_to_currency @pst_hst %></p>
-<p>GST: <%= number_to_currency @gst %></p>
+<p>PST/HST: <%= number_to_currency session[:pst_hst_amount] %></p>
+<p>GST: <%= number_to_currency session[:gst_amount] %></p>
 <p>Total: <%= number_to_currency session[:total] %></p>
 
 <%= link_to '/save_order', class:"waves-effect waves-light btn-small light-green darken-4" do %>
