Created 2 migrations to add stripe_cust_id and stripe_charge_id. Those columns are now saved/updated when an order is made.

--- a/app/views/orders/pay.html.erb
+++ b/app/views/orders/pay.html.erb
@@ -1,7 +1,12 @@
-<h2>Customer id: <%= @customer.id %></h2>
+<!-- <h2>Customer id: <%= @customer.id %></h2>
 <h2>Charge id: <%= @charge.id%></h2>
 <h3>STRIPE CUSTOMER</h3>
 <%= debug @customer%>
 <h3>STRIPE CHARGE</h3>
-<%= debug @charge %>
+<%= debug @charge %> -->
+<h2>Payment successful</h2>
+<h3>Here are the order details:</h3>
+<p>Name: <%= @new_order.customer.name %></p>
+<p>Order Date: <%= @new_order.orderDate %></p>
+<p>Total amount: <%= number_to_currency @new_order.orderTotal %></p>
 
